k8s/chatbot-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
      - name: chatbot
        image: akshayarsude1997/chatbot:2
        ports:
        - containerPort: 3000   # Use port 3000

---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
spec:
  selector:
    app: chatbot
  ports:
  - protocol: TCP
    port: 80                 # Expose port 80
    targetPort: 3000
  type: LoadBalancer
